# lang-qa

./: .gitignore  README.md  pyproject.toml
app/: evaluate.py  train.py
app/utils/: utils_functions.py
config/: config.json
notebooks/: exploratory_analysis.ipynb  exploratory_analysis_v1.ipynb  main.ipynb
