[tool.poetry]
name = "lang-qa"
version = "0.1.0"
description = "A cutting-edge question-and-answer system built using LangChain and a fine-tuned open-source LLM. LangQA leverages custom data integration to deliver accurate and context-aware responses, making it an intelligent and reliable tool for tailored information retrieval."
authors = ["Krupique <krupique@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = { version = "^2.5.0", source = "pytorch" }
torchvision = {version = "^0.20.1+cu118", source = "pytorch"}
torchaudio = {version = "^2.5.1+cu118", source = "pytorch"}
accelerate = "^1.3.0"
peft = "^0.14.0"
bitsandbytes = "^0.45.0"
transformers = "^4.48.1"
trl = "^0.13.0"
datasets = "^3.2.0"
langchain = "^0.3.14"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
